# api/swagger.json
@@ -50,7 +50,7 @@
             "$ref": "#/responses/notfound"
           },
           "409": {
-            "$ref": "#/responses/APISendTmplMessage"
+            "$ref": "#/responses/conflict"
           },
           "500": {
             "$ref": "#/responses/serverError"
@@ -107,7 +107,162 @@
             "$ref": "#/responses/notfound"
           },
           "409": {
-            "$ref": "#/responses/APISendTmplMessage"
+            "$ref": "#/responses/conflict"
+          },
+          "500": {
+            "$ref": "#/responses/serverError"
+          }
+        }
+      }
+    },
+    "/user/captcha": {
+      "get": {
+        "description": "description: 生成随机验证码图片",
+        "tags": [
+          "用户信息绑定"
+        ],
+        "operationId": "GenCaptcha",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "TraceID",
+            "description": "所有请求必须携带一个随机产生的 id，采用标准 UUID 格式，如：123e4567-e89b-12d3-a456-426655440000",
+            "name": "x-nova-trace-id",
+            "in": "header"
+          },
+          {
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "Timeout",
+            "description": "超时时间，以秒为单位，如：10",
+            "name": "x-nova-timeout",
+            "in": "header"
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/APICaptchaResp"
+          },
+          "400": {
+            "$ref": "#/responses/badRequest"
+          },
+          "401": {
+            "$ref": "#/responses/unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/notfound"
+          },
+          "409": {
+            "$ref": "#/responses/conflict"
+          },
+          "500": {
+            "$ref": "#/responses/serverError"
+          }
+        }
+      }
+    },
+    "/user/send-sms": {
+      "get": {
+        "description": "description: 发送短信验证码",
+        "tags": [
+          "用户信息绑定"
+        ],
+        "operationId": "SendSms",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "TraceID",
+            "description": "所有请求必须携带一个随机产生的 id，采用标准 UUID 格式，如：123e4567-e89b-12d3-a456-426655440000",
+            "name": "x-nova-trace-id",
+            "in": "header"
+          },
+          {
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "Timeout",
+            "description": "超时时间，以秒为单位，如：10",
+            "name": "x-nova-timeout",
+            "in": "header"
+          },
+          {
+            "x-go-name": "Data",
+            "name": "data",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/SendSmsReq"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/success"
+          },
+          "400": {
+            "$ref": "#/responses/badRequest"
+          },
+          "401": {
+            "$ref": "#/responses/unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/notfound"
+          },
+          "409": {
+            "$ref": "#/responses/conflict"
+          },
+          "500": {
+            "$ref": "#/responses/serverError"
+          }
+        }
+      }
+    },
+    "/user/verify-sms": {
+      "post": {
+        "description": "description: 验证短信验证码",
+        "tags": [
+          "用户信息绑定"
+        ],
+        "operationId": "VerifyAndUpdatePhone",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "TraceID",
+            "description": "所有请求必须携带一个随机产生的 id，采用标准 UUID 格式，如：123e4567-e89b-12d3-a456-426655440000",
+            "name": "x-nova-trace-id",
+            "in": "header"
+          },
+          {
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "Timeout",
+            "description": "超时时间，以秒为单位，如：10",
+            "name": "x-nova-timeout",
+            "in": "header"
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/success"
+          },
+          "400": {
+            "$ref": "#/responses/badRequest"
+          },
+          "401": {
+            "$ref": "#/responses/unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/notfound"
+          },
+          "409": {
+            "$ref": "#/responses/conflict"
           },
           "500": {
             "$ref": "#/responses/serverError"
@@ -117,6 +272,48 @@
     }
   },
   "definitions": {
+    "CaptchaResp": {
+      "type": "object",
+      "properties": {
+        "captcha_base_64_value": {
+          "description": "验证码，返回验证码Base64值",
+          "type": "string",
+          "x-go-name": "CaptchaBase64Value"
+        },
+        "captcha_id": {
+          "description": "验证码，返回验证码id",
+          "type": "string",
+          "x-go-name": "CaptchaID"
+        }
+      },
+      "x-go-package": "git.nova.net.cn/nova/misc/wx-public/proxy/internal/domain/entity"
+    },
+    "SendSmsReq": {
+      "type": "object",
+      "properties": {
+        "captcha_answer": {
+          "description": "图形验证码",
+          "type": "string",
+          "x-go-name": "CaptchaAnswer"
+        },
+        "captcha_id": {
+          "description": "图形验证码id",
+          "type": "string",
+          "x-go-name": "CaptchaID"
+        },
+        "open_id": {
+          "description": "微信用户的openID",
+          "type": "string",
+          "x-go-name": "OpenID"
+        },
+        "phone": {
+          "description": "目标手机号",
+          "type": "string",
+          "x-go-name": "Phone"
+        }
+      },
+      "x-go-package": "git.nova.net.cn/nova/misc/wx-public/proxy/internal/domain/entity"
+    },
     "SendTmplMsgReq": {
       "type": "object",
       "properties": {
@@ -217,6 +414,21 @@
     }
   },
   "responses": {
+    "APICaptchaResp": {
+      "description": "",
+      "schema": {
+        "type": "object",
+        "properties": {
+          "dat": {
+            "$ref": "#/definitions/CaptchaResp"
+          },
+          "err": {
+            "type": "string",
+            "x-go-name": "Err"
+          }
+        }
+      }
+    },
     "APISendTmplMessage": {
       "description": "",
       "schema": {
